--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ six==1.16.0
 sqlparse==0.4.2
 tomli==2.0.1
 typed-ast==1.5.4
-typing-extensions==4.2.0
+typing_extensions==4.2.0
 urllib3==1.26.9
 yarl==1.7.2
 zipp==3.8.0
